--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gateway",
+  "name": "gateway-service",
   "version": "1.0.0",
   "description": "This is API gateway that manages request to appropriate service and get response from it back to the client",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "pm2 start ./build/src/app.js -i 5 --attach --watch | pino-pretty -c",
     "stop": "pm2 stop all",
@@ -20,8 +20,8 @@
   "license": "ISC",
   "dependencies": {
     "@elastic/elasticsearch": "^8.12.2",
-    "@mohamedramadan14/freelance-shared": "^0.0.17",
-    "axios": "^1.6.7",
+    "@mohamedramadan14/freelance-shared": "^0.0.20",
+    "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
     "cookie-session": "^2.1.0",
